# da-learning

./: .buildinfo  .gitignore  .readthedocs.yml  00-at-the-beginning.html  01-get-start-with-regres.html  01-getting-started-with-regression.html  02-basics-of-simp-linear-regres.html  02-basics-of-simple-linear-regression.html  03-null-model.html  03-the-null-model.html  04-fit-curves-with-linear-model.html  04-fitting-curves-with-the-linear-model.html  05-linear-model-with-a-categ-explan-var.html  05-linear-models-with-a-categorical-explanatory-variable.html  06-multiplicative-linear-models.html  07-power-law-linear-models.html  08-linear-model-with-both-var.html  09-linear-model-with-both-var-without-interact.html  10-multi-linear-regress-model.html  11-linear-models-with-a-single-factor-explanatory-having-var-levels.html  12-linear-model-with two-explan-factor-var.html  13-model-count-data-using-poisson-distribute.html  14-pois-model-of-count-data.html  15-model-proporte-data-use-bino-distribute.html  16-anal-of-continue-table.html  DESCRIPTION  README.md  da-learning.Rproj  genindex.html  index.html  last.html  lint.r  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
_sources/: 01-get-start-with-regres.md  01-getting-started-with-regression.md  02-basics-of-simp-linear-regres.ipynb  03-null-model.ipynb  03-the-null-model.ipynb  04-fit-curves-with-linear-model.ipynb  04-fitting-curves-with-the-linear-model.ipynb  05-linear-model-with-a-categ-explan-var.ipynb  06-multiplicative-linear-models.ipynb  08-linear-model-with-both-var.ipynb  12-linear-model-with two-explan-factor-var.ipynb  13-model-count-data-using-poisson-distribute.ipynb  14-pois-model-of-count-data.ipynb  index.md  last.md
_static/: documentation_options.js
classwork/: STATS201_2023_SWU_A1.Rmd  STATS201_2023_SWU_A1.docx
data/: AkldHousePrices.txt  AttendPass.txt  EarthquakeMagnitudes.txt  babies_data.txt  basketball.csv
docs/: .lintr  00-at-the-beginning.md  02-basics-of-simp-linear-regres.ipynb  02-basics-of-simple-linear-regression.ipynb  03-null-model.ipynb  04-fit-curves-with-linear-model.ipynb  05-linear-model-with-a-categ-explan-var.ipynb  05-linear-models-with-a-categorical-explanatory-variable.ipynb  07-power-law-linear-models.ipynb  09-linear-model-with-both-var-without-interact.ipynb  10-multi-linear-regress-model.ipynb  11-linear-models-with-a-single-factor-explanatory-having-var-levels.ipynb  12-linear-model-with two-explan-factor-var.ipynb  13-model-count-data-using-poisson-distribute.ipynb  (+7 more)
(+252 files in other folders)
