[tool.poetry]
name = "data analysis learning"
version = "0.1.0"
description = "Some notes and code about CWorld learning Database Analysis."
authors = ["cworld1 <cworld0@qq.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter-book = "^0.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
