[build-system]
requires = ["flit_core >=3.5,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "data analysis learning"
authors = ["cworld1 <cworld0@qq.com>"]
keywords = [
    "science",
    "environments",
    "notebook",
]
dynamic = ["description", "version"]
requires-python = ">=3.9"
dependencies = [
    "sphinx>=4,<6",
]

[project.license]
file = "LICENSE"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://da.cworld.top"
Documentation = "https://da.cworld.top"

[project.optional-dependencies]
sphinx = [
    "matplotlib",
    "numpy",
]
testing = [
    "matplotlib",
    "numpy",
]

[tool.flit.sdist]
exclude = [
  ".*",  # Any hidden folders or files
  "docs/",
  "tests/",
  "scripts/",
  "tox.ini",
  "codecov.yml",
  "conftest.py",
]

[tool.isort]
profile = "black"