[build-system]
requires = ["flit_core >=3.5,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jupyter-book"
authors = [{name = "cworld1", email = "cworld0@qq.com"}]
keywords = [
    "science",
    "environments",
    "notebook",
]
dynamic = ["description", "version"]
requires-python = ">=3.9"
dependencies = [
    "sphinx>=4,<6",
    "sphinx-comments",
    "sphinx-copybutton",
    "sphinx-external-toc~=0.3.1",
    "sphinx-jupyterbook-latex~=0.5.2",
    "sphinx-design~=0.3.0",
    "sphinx-thebe~=0.2.0",
    "sphinx-book-theme~=1.0.0",
    "sphinx_togglebutton",
    "sphinxcontrib-bibtex>=2.2.0,<=2.5.0",
    "sphinx-multitoc-numbering~=0.1.3",
]

[project.license]
file = "LICENSE"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://da.cworld.top"
Documentation = "https://da.cworld.top"

[project.optional-dependencies]
sphinx = [
    "matplotlib",
    "numpy",
]
testing = [
    "matplotlib",
    "numpy",
]

[tool.flit.sdist]
exclude = [
  ".*",  # Any hidden folders or files
  "docs/",
  "tests/",
  "scripts/",
  "tox.ini",
  "codecov.yml",
  "conftest.py",
]

[tool.isort]
profile = "black"